--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
