--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/progress": "^2.0.24",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
+    "axios": "^1.6.6",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
